# pre-commit-hooks

./: .gitignore  .markdownlint.yaml  .mise.toml  .pre-commit-config.yaml  .pre-commit-hooks.yaml  .prettierignore  .prettierrc  CLAUDE.md  LICENSE  README.md  package.json  pnpm-lock.yaml  pyproject.toml
.github/: pull_request_template.md
.github/workflows/: pre-commit.yaml
hooks/: yamllint.py
